<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/layout_detail"
    android:padding="8dp"
    android:focusable="true"
    android:background="@android:color/transparent"
    android:focusableInTouchMode="true"
    tools:context=".DetailActivity">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txTitle"
        android:textSize="23sp"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/title"/>
    <EditText
        app:layout_constraintTop_toBottomOf="@id/txTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:id="@+id/txNote"
        android:textSize="17sp"
        android:background="@android:color/transparent"
        android:gravity="top"
        android:hint="@string/note"/>
    <TextView
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvAlarm_detail"
        android:textColor="#FAFAF7"
        android:layout_marginBottom="10dp"
        android:padding="5dp"
        android:background="@drawable/bg_tag"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/lnbot"/>
    <TextView
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvTag_detail"
        android:textColor="#FAFAF7"
        android:layout_marginBottom="10dp"
        android:padding="8dp"
        android:background="@drawable/bg_tag"
        android:layout_marginLeft="5dp"
        app:layout_constraintLeft_toRightOf="@id/tvAlarm_detail"
        app:layout_constraintBottom_toTopOf="@id/lnbot"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lnbot"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tvCreatedDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/created"/>
        <TextView
            android:id="@+id/tvLastDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/last"/>

        <TextView
            android:id="@+id/tvOption"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/option"
            android:drawableLeft="@drawable/ic_add_circle_black_24dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>